--- a/B56938 - Examen I/src/vista/PanelInformacion.form
+++ b/B56938 - Examen I/src/vista/PanelInformacion.form
@@ -85,6 +85,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNumeroPrestamo">
+      <Events>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNumeroPrestamoKeyPressed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNombreUsuario">
     </Component>
